kubernetes/testnet/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: casperparser-testnet
  name: casperparser-testnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: casperparser-testnet
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: casperparser-testnet
        name: casperparser-testnet
    spec:
      containers:
        - name: casperparser-testnet
          image: killianh/casperparser
          imagePullPolicy: Always
          args: [ "worker" ]
          resources: { }
          volumeMounts:
            - name: config-volume
              mountPath: /root/.casperParser.yaml
              subPath: .casperParser.yaml
      volumes:
        - name: config-volume
          configMap:
            name: parser-config
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: casperparser-testnet-era
  name: casperparser-testnet-era
spec:
  replicas: 5
  selector:
    matchLabels:
      app: casperparser-testnet-era
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: casperparser-testnet-era
        name: casperparser-testnet-era
    spec:
      containers:
        - name: casperparser-testnet-era
          image: killianh/casperparser
          imagePullPolicy: Always
          args: [ "worker", "-k", "10", "-q", "era,1" ]
          resources: { }
          volumeMounts:
            - name: config-volume
              mountPath: /root/.casperParser.yaml
              subPath: .casperParser.yaml
      volumes:
        - name: config-volume
          configMap:
            name: parser-config
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: casperparser-client-testnet
  name: casperparser-client-testnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: casperparser-client-testnet
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: casperparser-client-testnet
        name: casperparser-client-testnet
    spec:
      containers:
        - name: casperparser-client-testnet
          image: killianh/casperparser
          imagePullPolicy: Always
          args: [ "client" ]
          resources: { }
          volumeMounts:
            - name: config-volume
              mountPath: /root/.casperParser.yaml
              subPath: .casperParser.yaml
      volumes:
        - name: config-volume
          configMap:
            name: parser-config
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgrest-testnet
  name: postgrest-testnet
spec:
  selector:
    matchLabels:
      app: postgrest-testnet
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgrest-testnet
        name: postgrest-testnet
    spec:
      containers:
        - name: postgrest-testnet
          image: postgrest/postgrest:v8.0.0.20211102
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources: { }
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgrest-download-testnet
  name: postgrest-download-testnet
spec:
  selector:
    matchLabels:
      app: postgrest-download-testnet
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgrest-download-testnet
        name: postgrest-download-testnet
    spec:
      containers:
        - name: postgrest-download-testnet
          image: postgrest/postgrest:v8.0.0.20211102
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources: { }
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: casperparser-db-testnet
  name: casperparser-db-testnet
spec:
  selector:
    matchLabels:
      app: casperparser-db-testnet
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: casperparser-db-testnet
        name: casperparser-db-testnet
    spec:
      containers:
        - name: casperparser-db-testnet
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: max-conns
              mountPath: /docker-entrypoint-initdb.d
            - name: casperparser-testnet-pg-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: max-conns
          configMap:
            name: max-conns
        - name: casperparser-testnet-pg-volume
          persistentVolumeClaim:
            claimName: casperparser-testnet-pg-volume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: casperparser-redis-testnet
  name: casperparser-redis-testnet
spec:
  selector:
    matchLabels:
      app: casperparser-redis-testnet
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: casperparser-redis-testnet
        name: casperparser-redis-testnet
    spec:
      containers:
        - name: casperparser-redis-testnet
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: asynqmon-testnet
  name: asynqmon-testnet
spec:
  selector:
    matchLabels:
      app: asynqmon-testnet
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: asynqmon-testnet
        name: asynqmon-testnet
    spec:
      containers:
        - name: asynqmon-testnet
          image: hibiken/asynqmon
          ports:
            - containerPort: 8080
