kubernetes/testnet/monitor.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: casperparser-state-metrics-testnet
    k8s-app: casperparser-state-metrics-testnet
  annotations:
    alpha.monitoring.coreos.com/non-namespaced: "true"
  name: casperparser-state-metrics-testnet
spec:
  ports:
    - name: http-metrics
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: asynqmon-testnet
