kubernetes/testnet/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: gzip-compress
spec:
  compress: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: postgrest-tls-testnet
spec:
  entryPoints:
    - secure
  routes:
    - match: Host(`data.testnet.casperholders.com`)
      middlewares:
        - name: gzip-compress
      kind: Rule
      services:
        - name: postgrest-service-testnet
          port: 80
  tls:
    secretName: postgrest-cert-testnet
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: postgrest-http-testnet
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`data.testnet.casperholders.com`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
        - name: postgrest-service-testnet
          port: 80
